--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-js-pagination": "^3.0.3",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.4",
     "sass": "^1.56.1",
     "whatwg-fetch": "^2.0.3"
